--- a/aws/typescript-serverless/package.json
+++ b/aws/typescript-serverless/package.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "@aws-cdk/aws-apigatewayv2-alpha": "^2.24.1-alpha.0",
     "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.24.1-alpha.0",
+    "@aws-sdk/client-dynamodb": "^3.95.0",
+    "@aws-sdk/lib-dynamodb": "^3.95.0",
     "@aws-sdk/util-dynamodb": "^3.94.0",
     "@types/aws-lambda": "^8.10.97",
     "aws-cdk-lib": "2.24.1",
