--- a/r3f-lumberjack/package.json
+++ b/r3f-lumberjack/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "shader-composer-r3f": "^0.4.5",
     "three": "^0.144.0",
+    "vfx-composer-r3f": "^0.3.0",
     "xstate": "^4.33.6"
   },
   "devDependencies": {
