--- a/3d-shirt-shop/package.json
+++ b/3d-shirt-shop/package.json
@@ -12,11 +12,13 @@
     "@react-three/drei": "^9.38.1",
     "@react-three/fiber": "^8.8.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "three": "^0.146.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "@types/three": "^0.144.0",
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
